kubernetes-bonus/deployment-flask_server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web
  labels:
    app: flask-web
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: flask-web 
  template:
    metadata:
      labels:
        app: flask-web
    spec:
      containers:
        - name: flask-web
          image: diskoproject/flask-web-1:latest
          ports:
            - containerPort: 5000
              name: flask-port

---

apiVersion: v1
kind: Service 
metadata: 
  name: flask-service
spec:
  selector:
    app: flask-web 
  type: ClusterIP
  ports:
    - name: flask-port
      port: 5000
      targetPort: 5000
      protocol: TCP
