kubernetes-bonus/ingress-flsk-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:               
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000
